Made two styles.css file and linking it to index(homepage) file and recipes file respectively. Added: -responsive design and layout -css styles for cards and hover effect

--- a/index.html
+++ b/index.html
@@ -3,14 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe</title>
+    <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipe</h1>
+    <h1>Recipes</h1>
     <ul>
-        <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
-        <li><a href="./recipes/pasta.html">Pasta Recipe</a></li>
-        <li><a href="./recipes/coffee_shake.html">Coffee Shake Recipe</a></li>
+        <li>
+            <a href="./recipes/lasagna.html">
+                <div>
+                    <img src="./images/Lasagna.jpg" alt="Lasagna">
+                    <p class="para">Lasagna Recipe</p>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="./recipes/pasta.html">
+                <div>
+                    <img src="./images/Pasta.jpg" alt="Pasta">
+                    <p class="para">Pasta Recipe</p>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="./recipes/coffee_shake.html">
+                <div>
+                    <img src="./images/coffee_shake.jpg" alt="Coffee Shake">
+                    <p class="para">Coffee Shake Recipe</p>
+                </div>
+            </a>
+        </li>
     </ul>
+    <footer>
+        <p>&copy;2024 Odin Recipe. All rights reserved.</p>
+    </footer>
 </body>
 </html>
