--- a/recipes/coffee_shake.html
+++ b/recipes/coffee_shake.html
@@ -4,26 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee Shake</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <h1>Coffee Shake Recipe</h1>
-    <img src="../images/coffee_shake.jpg" alt="Coffee Shake">
-    <h3>Description</h3>
-    <p>
-        This shake is a blended coffee treat, much like an iced cappuccino you might buy at a restaurant. You can make it non-dairy by using soy milk.
-    </p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>1 teaspoon instant coffee granules</li>
-        <li>¾ cup milk</li>
-        <li>1 teaspoon vanilla extract</li>
-        <li>2 teaspoons white sugar, or to taste</li>
-        <li>6 ice cubes</li>
-        <li>2 teaspoons chocolate syrup (Optional)</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-        <li>Combine instant coffee, milk, vanilla, sugar, ice cubes, and chocolate syrup in a blender; blend until smooth.</li>
-    </ol>
+    <div class="top">
+        <div class="image">
+            <img class="img1" src="../images/coffee_shake.jpg">
+            <img class="img2" src="../images/coffee_shake.jpg">
+            <img class="img3" src="../images/coffee_shake.jpg">
+            <img class="img4" src="../images/coffee_shake.jpg" alt="Coffee Shake">
+        </div>
+        <div class="time">
+            <h3>Time Info</h3>
+            <ol style="list-style: none;">
+                <li>Prep: 15 min</li>
+                <li>Shaking: 10 min</li>
+                <li>Total: 25 min</li>
+            </ol>
+        </div>
+    </div>
+    <section class="description">
+        <h3>Description</h3>
+        <p>
+            This shake is a blended coffee treat, much like an iced cappuccino you might buy at a restaurant. You can make it non-dairy by using soy milk.
+        </p>
+    </section>
+    <div class="ingredients">
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 teaspoon instant coffee granules</li>
+            <li>¾ cup milk</li>
+            <li>1 teaspoon vanilla extract</li>
+            <li>2 teaspoons white sugar, or to taste</li>
+            <li>6 ice cubes</li>
+            <li>2 teaspoons chocolate syrup (Optional)</li>
+        </ul>
+    </div>
+    <div class="steps">
+        <h3>Steps</h3>
+        <ol>
+            <li>Combine instant coffee, milk, vanilla, sugar, ice cubes, and chocolate syrup in a blender; blend until smooth.</li>
+        </ol>
+    </div>
+    <a href="../index.html" class="back">&#8249;</a>
+    <footer>
+        <p>&copy;2024 Odin Recipe. All rights reserved.</p>
+    </footer>
 </body>
 </html>
