--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,33 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <h1>Lasagna Recipe</h1>
-    <img src="../images/Lasagna.jpg" alt="Lasagna">
-    <h2>Description</h2>
-    <p>
-        Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics:
-    </p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>Meat</li>
-        <li>Onion and Garlic</li>
-        <li>Tomato Products</li>
-        <li>Sugar</li>
-        <li>Spices and seasonings</li>
-        <li>Lasagna noodles</li>
-        <li>Cheeses</li>
-        <li>Egg</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-        <li>Make the meat sauce.</li>
-        <li>Cook the noodles.</li>
-        <li>Make the ricotta mixture.</li>
-        <li>Layer the lasagna according to the recipe instructions.</li>
-        <li>Cover with foil and bake.</li>
-        <li>Let the lasagna rest before serving.</li>
-    </ol>
+    <div class="top">
+        <div class="image">
+            <img class="img1" src="../images/Lasagna.jpg">
+            <img class="img2" src="../images/Lasagna.jpg">
+            <img class="img3" src="../images/Lasagna.jpg">
+            <img class="img4" src="../images/Lasagna.jpg" alt="Lasagna">
+        </div>
+        <div class="time">
+            <h3>Time Info</h3>
+            <ol style="list-style: none;">
+                <li>Prep: 15 min</li>
+                <li>Cook: 1 hr 5 min</li>
+                <li>Total: 1 hr 20 min</li>
+            </ol>
+        </div>
+    </div>
+    <section class="description">
+        <h3>Description</h3>
+        <p>
+            Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics:
+        </p>
+    </section>
+    <div class="ingredients">
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Meat</li>
+            <li>Onion and Garlic</li>
+            <li>Tomato Products</li>
+            <li>Sugar</li>
+            <li>Spices and seasonings</li>
+            <li>Lasagna noodles</li>
+            <li>Cheeses</li>
+            <li>Egg</li>
+        </ul>
+    </div>
+    <div class="steps">
+        <h3>Steps</h3>
+        <ol>
+            <li>Make the meat sauce.</li>
+            <li>Cook the noodles.</li>
+            <li>Make the ricotta mixture.</li>
+            <li>Layer the lasagna according to the recipe instructions.</li>
+            <li>Cover with foil and bake.</li>
+            <li>Let the lasagna rest before serving.</li>
+        </ol>
+    </div>
+    <a href="../index.html" class="back">&#8249;</a>
+    <footer>
+        <p>&copy;2024 Odin Recipe. All rights reserved.</p>
+    </footer>
 </body>
 </html>
