--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -4,32 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasta</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <h1>Pasta Recipe</h1>
-    <img src="../images/Pasta.jpg" alt="Pasta">
-    <h2>Description</h2>
-    <p>
-        This pasta salad is quick and easy to make. The liquid from the marinated artichoke hearts makes an excellent dressing.
-    </p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>1 cup salad macaroni, or other medium-size pasta</li>
-        <li>1 (6.5 ounce) jar marinated artichoke hearts</li>
-        <li>½ cup mushrooms, quartered</li>
-        <li>1 cup cherry tomatoes, halved</li>
-        <li>1 cup pitted black olives</li>
-        <li>1 tablespoon chopped fresh parsley</li>
-        <li>½ teaspoon dried basil</li>
-        <li>½ tablespoon dried oregano</li>
-        <li>2 cloves garlic, minced</li>
-        <li>salt and pepper to taste</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-        <li>Bring a large pot of salted water to boil; add pasta and boil until al dente according to packaging instructions, 8 to 10 minutes. Drain well and rinse with cold water.</li>
-        <li>In a large mixing bowl, combine pasta, artichoke hearts, mushrooms, tomatoes, olives, parsley, basil, oregano, garlic, salt and pepper; toss well.</li>
-        <li>Refrigerate for at least 4 hours. Before serving, season the pasta dish with salt and pepper to taste.</li>
-    </ol>
+    <div class="top">
+        <div class="image">
+            <img class="img1" src="../images/Pasta.jpg">
+            <img class="img2" src="../images/Pasta.jpg">
+            <img class="img3" src="../images/Pasta.jpg">
+            <img class="img4" src="../images/Pasta.jpg" alt="Pasta">
+        </div>
+        <div class="time">
+            <h3>Time Info</h3>
+            <ol style="list-style: none;">
+                <li>Prep: 20 min</li>
+                <li>Cook: 40 min</li>
+                <li>Total: 1 hr</li>
+            </ol>
+        </div>
+    </div>
+    <section class="description">
+        <h3>Description</h3>
+        <p>
+            This pasta salad is quick and easy to make. The liquid from the marinated artichoke hearts makes an excellent dressing.
+        </p>
+    </section>
+    <div class="ingredients">
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 cup salad macaroni, or other medium-size pasta</li>
+            <li>1 (6.5 ounce) jar marinated artichoke hearts</li>
+            <li>½ cup mushrooms, quartered</li>
+            <li>1 cup cherry tomatoes, halved</li>
+            <li>1 cup pitted black olives</li>
+            <li>1 tablespoon chopped fresh parsley</li>
+            <li>½ teaspoon dried basil</li>
+            <li>½ tablespoon dried oregano</li>
+            <li>2 cloves garlic, minced</li>
+            <li>salt and pepper to taste</li>   
+        </ul>
+    </div>
+    <div class="steps">
+        <h3>Steps</h3>
+        <ol>
+            <li>Bring a large pot of salted water to boil; add pasta and boil until al dente according to packaging instructions, 8 to 10 minutes. Drain well and rinse with cold water.</li>
+            <li>In a large mixing bowl, combine pasta, artichoke hearts, mushrooms, tomatoes, olives, parsley, basil, oregano, garlic, salt and pepper; toss well.</li>
+            <li>Refrigerate for at least 4 hours. Before serving, season the pasta dish with salt and pepper to taste.</li>
+        </ol>
+    </div>
+    <a href="../index.html" class="back">&#8249;</a>
+    <footer>
+        <p>&copy;2024 Odin Recipe. All rights reserved.</p>
+    </footer>
 </body>
 </html>
